--- a/_config.yml
+++ b/_config.yml
@@ -206,7 +206,7 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: article
+      layout: webpage
       sharing: true
       license: true
       aside:
