--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Bingus
+title: BBN3
 #email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  BBN3 is the pvp balance patch for BN3 Blue
+  The BN3 Balance patch
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "bbn3" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://bbn3" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 #github_username:  jekyll
 
