--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,8 @@ plugins:
 minima: 
   skin: dark
 
+root: "/bbn3-page"
+images: "/bbn3-page/images"
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
