--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,13 @@
 # in the templates via {{ site.myvariable }}.
 
 title: BBN3
-#email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   The BN3 Balance patch
-baseurl: "/bbn3-page" # the subpath of your site, e.g. /blog
 url: "https://ssbmars.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+
+
+#email: your-email@example.com
 #twitter_username: jekyllrb
 #github_username:  jekyll
 
@@ -32,12 +34,18 @@ remote_theme: jekyll/minima
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
+  - jekyll-github-metadata
 
 minima: 
   skin: dark
 
-root: "/bbn3-page"
-images: "/bbn3-page/images"
+bbn3repo: "/BBN3"
+bbn6repo: "/BBN6"
+
+media: "/media"
+
+
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
